Move apidocs to docs folder
